# excel-to-sql

./: .gitignore  README.md  pyproject.toml
excel_to_sql/: config.py  create_table.py  main.py  model.py  project_picture.py  templates.py
python_execution/: code_execution.py
sql_table/: config.py  create_table.py  create_table_extra.py  extra.txt  main.py  model.py  supportfuncs.py  templates.py
